[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Shit.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Splats/splat04.png" type="Texture2D" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 108.074

[node name="Shit" type="Area2D" groups=["shit"]]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color( 0.324219, 0.195325, 0.144889, 1 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_HoneySplat_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Shit_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
